# EduTutorAi

./: .env.example  .replit  README.md  app.py  pyproject.toml  replit.md  requirements.txt
Documents/Demo video/: video
Documents/Ideation Phase/: Brainstorming- Idea Generation- Prioritizaation Template.docx
Documents/Performance Testing/: GenAI Functional & Performance Testing.docx
Documents/Project Design Phase/Proposed Solution Template/: Proposed Solution Template.docx
Documents/Project planning Phase/: Planning logic.docx  Project Planning Template.docx
Documents/Requirement Analysis/: Data Flow Diagrams and User Stories.docx  Solution Requirements.docx  Technology Stack - Template.docx
auth/: google_auth.py
git/: FETCH_HEAD  config  index
git/logs/: HEAD
git/logs/refs/heads/: main  replit-agent
git/logs/refs/notes/: commits
git/logs/refs/remotes/origin/: main
git/refs/notes/: commits
git/refs/remotes/origin/: main
git/refs/replit/: agent-ledger
pages/: 1_Student_Dashboard.py  2_Take_Quiz.py  3_Quiz_History.py  4_Educator_Dashboard.py
services/: classroom_service.py  huggingface_service.py  pinecone_service.py
utils/: quiz_parser.py  session_manager.py
